--- a/src/Components/Style/ActiveLink.css
+++ b/src/Components/Style/ActiveLink.css
@@ -8,11 +8,11 @@
     width:0%;
     height: 1px;
     background-color: rgb(79,70,229);
-    bottom: 27px;
+    bottom: 1px;
     transition: all ease-in-out 0.5s;
 }
 .active:hover::after{
-    width:50%;
+    width:66.66%;
 }
 .bg-image{
     background-image: url('../../../public/bg-shape-1.png'),url('../../../public/bg-shape-2.png');
@@ -20,5 +20,9 @@
 
 }
 .bg{
+    height: 100%;
+}
+.bg-custom{
+    background-image: url('../../../public/bg-shape-2.png');
     height: 100%;
 }
