--- a/src/Components/Style/ActiveLink.css
+++ b/src/Components/Style/ActiveLink.css
@@ -1,28 +1,28 @@
-.active{
-    position: relative;
+.active {
+  position: relative;
 }
-.active::after{
-    content:'';
-    position: absolute;
-    display: block;
-    width:0%;
-    height: 1px;
-    background-color: rgb(79,70,229);
-    bottom: 1px;
-    transition: all ease-in-out 0.5s;
+.active::after {
+  content: "";
+  position: absolute;
+  display: block;
+  width: 0%;
+  height: 1px;
+  background-color: rgb(79, 70, 229);
+  bottom: 1px;
+  transition: all ease-in-out 0.5s;
 }
-.active:hover::after{
-    width:66.66%;
+.active:hover::after {
+  width: 66.66%;
 }
-.bg-image{
-    background-image: url('../../../public/bg-shape-1.png'),url('../../../public/bg-shape-2.png');
-    height: 100%;
-
+.bg-image {
+  background-image: url("../../../public/bg-shape-1.png"),
+    url("../../../public/bg-shape-2.png");
+  height: 100%;
 }
-.bg{
-    height: 100%;
+.bg {
+  height: 100%;
 }
-.bg-custom{
-    background-image: url('../../../public/bg-shape-2.png');
-    height: 100%;
+.bg-custom {
+  background-image: url("../../../public/bg-shape-2.png");
+  height: 100%;
 }
